# medit

./: Cargo.toml  LICENSE  README.md
assets/syntaxes/: README.md
doc/: medit.1.scd  medit.toml.5.scd
src/: app.rs  buffer.rs  config.rs  input.rs  main.rs  picker.rs  search.rs  syntax.rs  view.rs
src/lsp/: actions.rs  diagnostics.rs  mod.rs  transport.rs
